--- a/autocreatetable-core/pom.xml
+++ b/autocreatetable-core/pom.xml
@@ -27,6 +27,10 @@
             <artifactId>dom4j</artifactId>
             <version>2.1.4</version>
         </dependency>
+        <dependency>
+            <groupId>jaxen</groupId>
+            <artifactId>jaxen</artifactId>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
