--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,14 @@
     </modules>
 
     <properties>
-        <java.version>17</java.version>
+<!--        <java.version>17</java.version>-->
+<!--        <spring-boot.version>3.4.3</spring-boot.version>-->
+        <java.version>8</java.version>
+        <spring-boot.version>2.2.8.RELEASE</spring-boot.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-boot.version>3.4.3</spring-boot.version>
-        <fastjson.version>2.0.53</fastjson.version>
-        <hutool.version>5.8.36</hutool.version>
+        <hutool.version>5.4.5</hutool.version>
         <dom4j.version>2.1.4</dom4j.version>
         <mysql.version>8.0.33</mysql.version>
         <postgresql.version>42.7.4</postgresql.version>
@@ -62,7 +63,7 @@
             </dependency>
             <dependency>
                 <groupId>cn.hutool</groupId>
-                <artifactId>hutool-core</artifactId>
+                <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
             </dependency>
             <dependency>
