--- a/pom.xml
+++ b/pom.xml
@@ -3,24 +3,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.qcsy.autocreatetable</groupId>
-    <artifactId>autocreatetable</artifactId>
+    <groupId>io.github.qcsystudio</groupId>
+    <artifactId>autocreatetable-parent</artifactId>
     <version>1.0</version>
     <packaging>pom</packaging>
-
     <name>autocreatetable</name>
-    <description>qframe框架</description>
+    <description>for auto create table data base </description>
 
     <modules>
-        <module>autocreatetable-core</module>
+        <module>autocreatetable</module>
         <module>autocreatetable-app</module>
     </modules>
 
     <properties>
-<!--        <java.version>17</java.version>-->
-<!--        <spring-boot.version>3.4.3</spring-boot.version>-->
-        <java.version>8</java.version>
-        <spring-boot.version>2.2.8.RELEASE</spring-boot.version>
+        <java.version>17</java.version>
+        <spring-boot.version>3.4.3</spring-boot.version>
+<!--        <java.version>8</java.version>-->
+<!--        <spring-boot.version>2.2.8.RELEASE</spring-boot.version>-->
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
