--- a/autocreatetable/pom.xml
+++ b/autocreatetable/pom.xml
@@ -117,8 +117,7 @@
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>1.6</version>
                 <configuration>
-                    <!-- 改成你自己的路径 -->
-                    <executable>D:\gpg4\GnuPG\bin\gpg.exe</executable>
+                    <executable>D:\develop_tools\GnuPG\bin\gpg.exe</executable>
                 </configuration>
                 <executions>
                     <execution>
