--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,10 @@
     </modules>
 
     <properties>
-        <java.version>17</java.version>
-        <spring-boot.version>3.4.3</spring-boot.version>
-<!--        <java.version>8</java.version>-->
-<!--        <spring-boot.version>2.2.8.RELEASE</spring-boot.version>-->
+<!--        <java.version>17</java.version>-->
+<!--        <spring-boot.version>3.4.3</spring-boot.version>-->
+        <java.version>8</java.version>
+        <spring-boot.version>2.2.8.RELEASE</spring-boot.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
