--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
                 <version>${postgresql.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.oracle</groupId>
+                <groupId>com.oracle.database.jdbc</groupId>
                 <artifactId>ojdbc6</artifactId>
                 <version>${oracle.version}</version>
             </dependency>
